swing14 drawing on string different background